--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
-Flask==0.10.1
-Flask-Babel==0.9
 Flask-RESTful==0.3.4
-Flask-WTF==0.11
-SQLAlchemy==1.0.6
-
+Flask==0.10.1
+Flask-SQLAlchemy==2.0
+itsdangerous==0.24
+Jinja2==2.8
+MarkupSafe==0.23
+MySQL-python==1.2.5
+SQLAlchemy==1.0.8
+uWSGI==2.0.11.1
+Werkzeug==0.10.4
+wheel==0.24.0
